# smart-home

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  readme.md
cpp_template/tools/: CMakeLists.txt  named_tools.cpp  named_tools.h  tools.cpp  tools.h
executables/: CMakeLists.txt  daemon_showcase.cpp  print_hello.cpp
executables/playground/: main.cpp
executables/playground/include/: Entrypoint.h
executables/playground/include/commands/: DelayedDaemonCommand.h  NetServerRequestCommand.h  ProtocolSerializationCommand.h  UspClientRequestCommand.h  UspServerConfigCommand.h  UspServerRequestCommand.h
executables/playground/src/: Entrypoint.cpp
executables/playground/src/commands/: DelayedDaemonCommand.cpp  NetServerRequestCommand.cpp  ProtocolSerializationCommand.cpp  UspClientRequestCommand.cpp  UspServerConfigCommand.cpp  UspServerRequestCommand.cpp
smart_home/: CMakeLists.txt
smart_home/daemon/: CMakeLists.txt  configure_systemd.sh  template.service
smart_home/daemon/include/: Daemon.h  DaemonRunner.h  ExitCodes.h  SignalDaemon.h
smart_home/daemon/src/: DaemonRunner.cpp  SignalDaemon.cpp
smart_home/usp_protocol/: CMakeLists.txt  README.md
smart_home/usp_protocol/include/: CommonMessageData.h  CommonOptions.h  ExecutionCodes.h  MessageHandlerBuilder.h  MessageUnion.h  UspServer.h  UspServerConfig.h  UspServerRequest.h  UspServerResponse.h
smart_home/usp_protocol/include/exceptions/: ProtocolAllocationException.h  ProtocolPacketException.h  ProtocolSerializationException.h  ProtocolStructuralException.h
smart_home/usp_protocol/include/handlers/: AcknowledgementMessageHandler.h  BinaryMessageHandler.h  CommonMessageData.h  CommonOptions.h  MessageBasisHandlerBuilder.h  MessageHandlerBuilder.h  MessageUnion.h  PendingRequest.h  ProtocolMessageHandler.h  RequestMessageHandler.h  ResponseMessageHandler.h
smart_home/usp_protocol/include/handlers/model/: Deserialization.h  Message.h  ProtocolBasisHandler.h  ProtocolMessageHandler.h  Serialization.h
smart_home/usp_protocol/include/handlers/version1/: AcknowledgementMessageHandler.h  BinaryMessage.h  BinaryMessageHandler.h  MessageBasisHandler.h  ProtocolMessageHandler.h  RequestMessageHandler.h  ResponseMessageHandler.h
smart_home/usp_protocol/include/messages/: AcknowledgementMessage.h  BinaryMessage.h  CommonMessageData.h  ProtocolMessage.h  RequestMessage.h  ResponseMessage.h
smart_home/usp_protocol/include/messages/model/: Message.h
smart_home/usp_protocol/include/model/: Deserialization.h  Message.h  ProtocolBasisHandler.h  ProtocolMessageHandler.h  ProtocolVersion.h  Serialization.h
smart_home/usp_protocol/include/net/: ExitCodes.h  NetServer.h  NetServerClientInfo.h  NetServerConfig.h
smart_home/usp_protocol/include/packets/: SequencedPacketPoller.h
smart_home/usp_protocol/include/packets/model/: PacketPoller.h  SplitMessage.h
smart_home/usp_protocol/include/server/: ExitCodes.h  UspServer.h  UspServerClientInfo.h  UspServerConfig.h
smart_home/usp_protocol/include/version1/: BinaryMessage.h  BinaryMessageHandler.h  CommonMessageData.h  MessageBasisHandler.h  MessageUnion.h  ProtocolVersion1.h
smart_home/usp_protocol/include/version1/acknowledgement/: AcknowledgementMessage.h  AcknowledgementMessageHandler.h
smart_home/usp_protocol/include/version1/protocol/: ProtocolMessage.h  ProtocolMessageHandler.h
smart_home/usp_protocol/include/version1/request/: RequestMessage.h  RequestMessageHandler.h
smart_home/usp_protocol/src/: CommonMessageData.cpp  MessageHandlerBuilder.cpp  MessageUnion.cpp  UspServer.cpp  UspServerConfig.cpp  UspServerRequest.cpp  UspServerResponse.cpp
smart_home/usp_protocol/src/exceptions/: ProtocolAllocationException.cpp  ProtocolPacketException.cpp  ProtocolSerializationException.cpp  ProtocolStructuralException.cpp
smart_home/usp_protocol/src/handlers/: AcknowledgementMessageHandler.cpp  CommonMessageData.cpp  MessageBasisHandlerBuilder.cpp  MessageUnion.cpp  ProtocolMessageHandler.cpp  RequestMessageHandler.cpp  ResponseMessageHandler.cpp
smart_home/usp_protocol/src/messages/: AcknowledgementMessage.cpp  ProtocolMessage.cpp  RequestMessage.cpp  ResponseMessage.cpp
smart_home/usp_protocol/src/net/: NetServer.cpp
smart_home/usp_protocol/src/packets/: SequencedPacketPoller.cpp
smart_home/usp_protocol/src/version1/: BinaryMessageHandler.cpp  CommonMessageData.cpp  MessageBasisHandler.cpp  MessageUnion.cpp  ProtocolVersion1.cpp
smart_home/usp_server/: CMakeLists.txt
smart_home/usp_server/include/: UspAsyncServer.h  UspServer.h  UspServerClient.h  UspServerConfig.h  UspServerRequest.h  UspServerResponse.h  UspSyncServer.h
smart_home/usp_server/include/model/: UspServer.h
smart_home/usp_server/include/packets/: PacketPoller.h  SequencedPacketPoller.h  SplitMessage.h
smart_home/usp_server/include/version1/: UspAsyncServer.h  UspServerRequest.h  UspServerResponse.h
smart_home/usp_server/src/: UspAsyncServer.cpp  UspServer.cpp  UspServerClient.cpp  UspServerConfig.cpp  UspServerRequest.cpp  UspServerResponse.cpp  UspSyncServer.cpp
smart_home/usp_server/src/model/: UspServer.cpp
smart_home/usp_server/src/packets/: SequencedPacketPoller.cpp
smart_home/usp_server/src/version1/: UspAsyncServer.cpp  UspServerRequest.cpp  UspServerResponse.cpp
smart_home/utilities/: CMakeLists.txt
smart_home/utilities/include/: BinaryReader.h  Singleton.h  TypesHelper.h
smart_home/utilities/include/exceptions/: CodeException.h  CompleteException.h  ExceptionsLoggerShell.h  LevelException.h
smart_home/utilities/include/patterns/: Command.h  PresentableCommand.h  Singleton.h
smart_home/utilities/src/: placeholder.cpp
smart_home/utilities/src/exceptions/: CodeException.cpp  CompleteException.cpp  ExceptionsLoggerShell.cpp  LevelException.cpp
smart_home/web_server/: CMakeLists.txt
smart_home/web_server/include/: ExitCodes.h  NetServer.h  NetServerClientInfo.h  NetServerConfig.h
smart_home/web_server/src/: ExitCodes.cpp  NetServer.cpp  NetServerClientInfo.cpp  NetServerConfig.cpp
smart_home/web_server/tests/: main.cpp
(+28 files in other folders)
